dewikify common langs, ttbc, [[User:Connel MacKenzie/Format|fmt]] <octillion#2002467>

--- a/en/o/octillion.34109.wikitext
+++ b/en/o/octillion.34109.wikitext
@@ -16,8 +16,8 @@ From the prefix ''[[oct-]]'' (''eight'') + ''[[-illion]]'' (from [[million]]); [
 # (''dated British & Australian, [[w:Long and short scales|long scale]]'') A [[quadrillion]] [[quintillion]]: 1 followed by 48 zeros, 10<sup>48</sup>.
 
 *''Western (Arabic) Numeral'' '''octillion''', '''10<sup>27</sup>''' [[w:Long and short scales|short scale]], '''10<sup>48</sup>''' [[w:Long and short scales|long scale]]
-**'''Previous''': [[septillion]]: [[w:Long and short scales|short scale]] 10<sup>24</sup>, [[w:Long and short scales|long scale]] 10<sup>42</sup>
-**'''Next''': [[nonillion]]: [[w:Long and short scales|short scale]] 10<sup>30</sup>, [[w:Long and short scales|long scale]] 10<sup>54</sup>
+**[[Previous]]: [[septillion]]: [[w:Long and short scales|short scale]] 10<sup>24</sup>, [[w:Long and short scales|long scale]] 10<sup>42</sup>
+**[[Next]]: [[nonillion]]: [[w:Long and short scales|short scale]] 10<sup>30</sup>, [[w:Long and short scales|long scale]] 10<sup>54</sup>
 
 ====Synonyms====
 *10<sup>48</sup>: a [[w:Long and short scales|short scale]] [[quindecillion]]
@@ -37,11 +37,11 @@ From the prefix ''[[oct-]]'' (''eight'') + ''[[-illion]]'' (from [[million]]); [
 
 =====Translations to be checked=====
 {{checktrans}}
-*Chinese numeral: [[一]][[極]] (10<sup>48</sup>)
-*Finnish: [[oktiljoona]]
-*French: octillion {{f}}
-*Japanese: [[千]][[秭]] (せんし, sensi)
-*Latin: [[octillio]], [[octillionis]] {{f}}
+*{{ttbc|Chinese numeral}}: [[一]][[極]] (10<sup>48</sup>)
+*{{ttbc|Finnish}}: [[oktiljoona]]
+*{{ttbc|French}}: octillion {{f}}
+*{{ttbc|Japanese}}: [[千]][[秭]] (せんし, sensi)
+*{{ttbc|Latin}}: [[octillio]], [[octillionis]] {{f}}
 
 [[Category:Cardinal numbers]]
 
