/* Translations */ Checked Finnish translations <octillion#2002985>

--- a/en/o/octillion.34109.wikitext
+++ b/en/o/octillion.34109.wikitext
@@ -25,12 +25,14 @@ From the prefix ''[[oct-]]'' (''eight'') + ''[[-illion]]'' (from [[million]]); [
 ====Translations====
 ;a thousand trillion trillion, 10<sup>27</sup>
 {{top}}
+*Finnish: [[kvadriljardi]]
 *German: [[Quadrilliarde]]
 {{mid}}
 {{bottom}}
 
 ;a quadrillion quintillion, 10<sup>48</sup>
 {{top}}
+*Finnish: [[oktiljoona]]
 *German: [[Oktillion]] {{f}}
 {{mid}}
 {{bottom}}
@@ -38,7 +40,6 @@ From the prefix ''[[oct-]]'' (''eight'') + ''[[-illion]]'' (from [[million]]); [
 =====Translations to be checked=====
 {{checktrans}}
 *{{ttbc|Chinese numeral}}: [[一]][[極]] (10<sup>48</sup>)
-*{{ttbc|Finnish}}: [[oktiljoona]]
 *{{ttbc|French}}: octillion {{f}}
 *{{ttbc|Japanese}}: [[千]][[秭]] (せんし, sensi)
 *{{ttbc|Latin}}: [[octillio]], [[octillionis]] {{f}}
