--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -1,9 +1,10 @@
+{{wikipedia}}
 ==English==
 
 {{rank|authority|pleasant|forget|862|break|Roman|wise|watch}}
 
 ===Etymology===
-Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]'', and Gothic ''[[brikan]]''. Cognate with Latin ''[[frangere]]'' (to break).
+{{OE.}} ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]'', and Gothic ''[[brikan]]''. Cognate with Latin ''[[frangere]]'' (to break).
 
 ===Pronunciation===
 * {{AHD|/brāk/}}
