/* Translations */ add gender to cy <thing#2005589>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -100,7 +100,7 @@ From Middle English, from Old English ''[[þing]]''.
 *Swedish: [[sak]] {{c}}, [[ting]] {{n}}
 *[[Tupinambá]]: [[mba'e]]
 *Urdu: {{URchar|[[وستو]]}} (vastū) {{m}}, {{URchar|[[چیز]]}} (ćīz) {{f}}
-*Welsh: [[peth]] {{g|Welsh}}
+*Welsh: [[peth]] {{m}}
 {{bottom}}
 
 '''any physical or psychical entity'''
@@ -155,7 +155,7 @@ From Middle English, from Old English ''[[þing]]''.
 *[[Telugu]]: [[వస్తువు]] (vastuvu)
 *[[Tupinambá]]: [[mba'e]]
 *Urdu: {{URchar|[[وستو]]}} (vastū) {{m}}, {{URchar|[[چیز]]}} (ćīz) {{f}}
-*Welsh: [[peth]] {{g|Welsh}}
+*Welsh: [[peth]] {{m}}
 {{bottom}}
 
 '''a legislative or judicial assembly'''
