Added noun template <κύων#2012102>

--- a/en/κ/κύων.4255.wikitext
+++ b/en/κ/κύων.4255.wikitext
@@ -7,7 +7,7 @@
 {{IPA|[ˈkyon] / [ˈkion] / [ˈkio̞n] / [ˈcio̞n]}}
 
 ===Noun===
-'''κύων''' ''[[masculine|m.]]'' (''[[genitive|gen.]]'' κυνός)
+{{grc-noun|κύων|κυνός|m|third|kyōn}}
 
 #[[dog]].
 
