/* Japanese */ noun <dame#2012282>

--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -40,8 +40,9 @@ Via Middle English and Old French from Latin ''[[domina]]''
 
 
 ==Japanese==
-===Adjective===
-{{ja-adj|r|hira=だめ}}
+{{see|damena}}
+===Noun===
+{{ja-noun|r|hira=だめ}}
 # [[駄目]]: no good; useless; hopeless
 
 ----
