--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -34,6 +34,7 @@ Old English ''[[wiht]]'', ''ġewiht''
 *German: [[Gewicht]] {{n}}
 *Italian: [[peso]] {{m}}
 {{mid}}
+*Portuguese: [[gravidade]]
 *Romanian: [[greutate]] {{f}}
 *Russian: [[вес]] (v'es) {{m}}
 *Swedish: [[tyngd]] {{c}}
@@ -49,6 +50,7 @@ Old English ''[[wiht]]'', ''ġewiht''
 *German: [[Gewicht]] {{n}}
 *Italian: [[peso]] {{m}}
 {{mid}}
+*Portuguese: [[peso]]
 *Romanian: [[greutate]] {{f}}
 *Russian: [[груз]] (gruz) {{m}}
 *Swedish: [[vikt]] {{c}}
