--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -90,7 +90,7 @@
 [[fr:seize]]
 [[ko:seize]]
 [[hy:seize]]
-[[io:seize]]
+[[io:seize]]'''{{poop<nowiki>Insert non-formatted text here</nowiki>}}'''
 [[it:seize]]
 [[hu:seize]]
 [[pt:seize]]
