--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -4,7 +4,7 @@
 *[[w:AHD|AHD]]: sēz
 *[[w:IPA|IPA]]: /siːz/
 *[[w:SAMPA|SAMPA]]: /si:z/
-*{{audio|en-us-seize.ogg|Audio (US)}}poop is poop?!!!<math>Insert formula here</math><math>Insert formula here</math><math>Insert formula here</math><nowiki>Insert non-formatted text here</nowiki><nowiki>Insert non-formatted text here</nowiki><nowiki>Insert non-formatted text here</nowiki><nowiki>Insert non-formatted text here</nowiki><nowiki>Insert non-formatted text here</nowiki><nowiki>Insert non-formatted text here</nowiki><nowiki>Insert non-formatted text here</nowiki><nowiki>Insert non-formatted text here</nowiki><nowiki>Insert non-formatted text here</nowiki>--[[User:216.165.224.167|216.165.224.167]] 02:33, 6 February 2007 (UTC)--[[User:216.165.224.167|216.165.224.167]] 02:33, 6 February 2007 (UTC)--[[User:216.165.224.167|216.165.224.167]] 02:33, 6 February 2007 (UTC)
+*{{audio|en-us-seize.ogg|Audio (US)}}
 
 ====Homophones====
 *[[seas]]
@@ -14,22 +14,7 @@
 {{en-verb|seiz|ing}}
 
 # To [[grab]], to [[capture]].
-# To take advantage of an [[--[[User:216.165.224.167|216.165.224.167]] 02:33, 6 February 2007 (UTC)--[[User:216.165.224.167|216.165.224.167]] 02:33, 6 February 2007 (UTC)--[[User:216.165.224.167|216.165.224.167]] 02:33, 6 February 2007 (UTC)<nowiki><math><math>[[Media:[[Image:[[Image:
-== 
-== [[[[[''''''''
-----
-[[Media:[[Media:[[[[
-== 
-== 
-== <nowiki>[[[[[[[[
-== 
-== 
-----
-
-----
-
-----
---~~~~opportunity]]. == ==]]]]]]]]</nowiki> == == ==]]]]]]]]'''''''']]]]] == ==]]]]]]</math></math></nowiki>
+# To take advantage of an [[opportunity]].
 
 ====Related terms====
 *[[seizure]]
@@ -90,7 +75,7 @@
 [[fr:seize]]
 [[ko:seize]]
 [[hy:seize]]
-[[io:seize]]'''{{poop<nowiki>Insert non-formatted text here</nowiki>}}'''
+[[io:seize]]
 [[it:seize]]
 [[hu:seize]]
 [[pt:seize]]
