--- a/en/d/dud.26266.wikitext
+++ b/en/d/dud.26266.wikitext
@@ -55,6 +55,7 @@ From Arabic {{ARchar|[[توت|تُوت]]}} (''tut'') via Turkish [[dut]].
 [[Category:sr:Fruits]]
 
 [[it:dud]]
+[[ro:dud]]
 [[ru:dud]]
 [[vi:dud]]
 [[zh:dud]]
