--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -1,11 +1,11 @@
 ==English==
 
 ===Etymology===
-Middle English ''whistlen''; Anglo-Saxon ''hwistlan''.
+{{ME.}} ''[[whistlen]]''; {{OE.}} ''[[hwistlan]]''.
 
 ===Pronunciation===
 *{{audio|en-us-whistle.ogg|Audio (US)}}
-*:Rhymes: [[Rhymes:English:-ɪsəl|-ɪsəl]]
+*{{rhymes|ɪsəl}}
 
 ===Verb===
 {{en-verb|whistl|ing}}
@@ -15,7 +15,7 @@ Middle English ''whistlen''; Anglo-Saxon ''hwistlan''.
 #:''A bullet '''whistled''' past.''
 
 ====Translations====
-{{top}}
+{{trans-top|to whistle}}
 *[[Breton]]: [[c'hwitellat]] (1,2)
 *[[Catalan]]: [[xiular]]
 *Croatian: [[zviždati]]
@@ -23,15 +23,15 @@ Middle English ''whistlen''; Anglo-Saxon ''hwistlan''.
 *Dutch: [[fluiten]] (1,2)
 *Esperanto: [[fajfi]]
 *Finnish: [[viheltää]]
-{{mid}}
 *French: [[siffler]]
 *Indonesian: [[siul|bersiul]]
+{{trans-mid}}
 *Polish: [[gwizdać]], [[świstać]]
 *Portuguese: [[apitar]], [[assobiar]]
 *Russian: [[свистеть]] (svistét’)
 *Spanish: [[chiflar]], [[silbar]]
 *[[Telugu]]: [[ఈల వేయు]] (eela vEyu), [[బూర ఊదు]] (boora oodu)
-{{bottom}}
+{{trans-bottom}}
 
 ===Noun===
 {{en-noun}}
@@ -39,10 +39,10 @@ Middle English ''whistlen''; Anglo-Saxon ''hwistlan''.
 # A device designed to be placed in the mouth in order to make a whistling sound.
 # A shrill, high-pitched sound made by whistling.
 # Any high-pitched sound similar to the sound made by whistling.
-# (''slang'') A suit.
+# {{CockneyRS}} A suit.
 
 ===Translations===
-{{top}}
+{{trans-top|whistle}}
 *Arabic: {{ARchar|[[صفارة]]}} {{Unicode|(ʂufára)}} {{f}}
 *[[Breton]]: [[c'hwitell]] {{f}}, c'hwitelloù {{p}} (1); [[c'hwitelladenn]] {{f}}, c'hwitelladennoù {{p}} (2,3)
 *[[Catalan]]: [[xiulet]] {{m}}
@@ -53,12 +53,12 @@ Middle English ''whistlen''; Anglo-Saxon ''hwistlan''.
 *Finnish: [[pilli]] (1), [[vihellys]] (2) (3), [[vislaus]] (2)
 *French: [[sifflet]] {{m}}
 *German: [[Pfeife]] {{f}}
-{{mid}}
 *Indonesian: [[peluit]]
 *Irish: [[feadog]]
 *Italian: [[fischietto]], [[fischio]]
 *Japanese: [[笛]] ([[ふえ]], fue), [[口笛]] (くちぶえ, kuchibue)
 *Korean: [[호르라기]] (horeuragi)
+{{trans-mid}}
 *Polish: [[gwizd]] {{m}} (2,3) [[gwizdek]] {{m}} (1)
 *Portuguese: [[apito]] {{m}} (1,2,3), [[assobio]] {{m}} (2,3)
 *Russian: [[свисток]] (svistók) {{m}}
@@ -66,7 +66,7 @@ Middle English ''whistlen''; Anglo-Saxon ''hwistlan''.
 *Swahili: [[kipenga]]
 *Swedish: [[visselpipa]]
 *[[Telugu]]: [[ఈల]] (eela), [[బూర]] (boora)
-{{bottom}}
+{{trans-bottom}}
 
 [[Category:1000 English basic words]]
 
