robot  Adding: [[ja:behold]] <behold#2087386>

--- a/en/b/behold.6790.wikitext
+++ b/en/b/behold.6790.wikitext
@@ -33,11 +33,12 @@
 [[fr:behold]]
 [[gl:behold]]
 [[io:behold]]
+[[it:behold]]
 [[hu:behold]]
+[[ja:behold]]
 [[pl:behold]]
 [[pt:behold]]
 [[fi:behold]]
 [[vi:behold]]
 [[uk:behold]]
 [[zh:behold]]
-[[it:behold]]
