--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -107,6 +107,7 @@ The suffix has been used since around the 17th and 18th century. It is believed 
 [[es:qua]]
 [[fr:qua]]
 [[io:qua]]
+[[it:qua]]
 [[nl:qua]]
 [[pt:qua]]
 [[vi:qua]]
