--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -65,7 +65,7 @@
 *Greek: [[βάζω στοίχημα οτί]]
 {{mid}}
 *Greek: [[στοιχηματίζω]] [stiˌçimaˈtizo̞]
-*Hebrew: [[להמר]] (l'hɑmer) {{m}}
+*Hebrew: [[להמר]] (le'hamer) 
 *Indonesian: [[taruh|mempertaruhkan]]
 *Japanese: [[賭ける]] ([[かける]], kakeru)
 *Latvian: [[derēt]]
