--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -24,7 +24,7 @@
 *Finnish: [[veto]]
 *German: [[Wette]] ''f''
 *Greek: [[στοίχημα]] [ˈstiçiˌma] ''n''
-*Hebrew: התערבות (hitarvut) ''f''
+*Hebrew: [[התערבות]] (hitarvut) ''f''
 {{mid}}
 *Italian: [[scommessa]] ''f''
 *Latvian: [[likme]] ''f''
