--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -67,6 +67,7 @@
 *Finnish: [[räjähtää]]
 *French: [[exploser]]
 *German: [[hochgehen]], [[in]] [[die]] [[Luft]] [[gehen]], [[explodieren]]
+*Hebrew: [[להתפוצץ]] (le'hitpotzetz)
 {{trans-mid}}
 *Korean: [[터지다]] (teojida) 
 *Russian: [[взрываться]]/[[взорваться]] (vzryvát's'a/vzorvát's'a), [[взлетать на воздух]]/[[взлететь на воздух]] (vzletát' na vózduχ/vzlet'ét' na vózduχ)
