--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -93,7 +93,7 @@ From Northern [[French]]
 *Russian: [[кролик]] (krolik) {{m}}, [[крольчиха]] {{f}}
 *[[Sami]]: [[kaniidna]]
 *[[Sardinian]]: [[cunillu]], [[cacciappu]]
-*Scottish: [[coineanach]]
+*Scots Gaelic: [[coineanach]] {{m}}
 *Serbian:
 *:Cyrillic: [[зец#Serbian|зец]] {{m}}, [[кунић#Serbian|кунић]] {{m}}
 *:Roman: [[zec#Serbian|zec]] {{m}}, [[kunić#Serbian|kunić]] {{m}}
