--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -78,7 +78,7 @@
 *Japanese: [[割れる]] (wareru), [[散らばる]] (chirabaru)
 {{mid}}
 *Korean: [[부러지다]] (bureojida)
-*Portuguese: [[quebrar]], [[partir]]
+*Portuguese: [[Quebrar]], [[Partir]], [[Romper]] (if flexible material)
 *Romanian: a (se) [[frânge]], a (se) [[rupe]]
 *Russian: [[разбиваться]]/[[разбиться]] (razbivát's'a/razbít's'a)
 *Slovene: [[zlomiti se]] (two pieces), [[razbiti se]] (more pieces)
@@ -100,6 +100,7 @@
 *Italian: [[rompere]]
 *Japanese: [[ひびが入る]] (hibi-ga-hairu), [[折れる]] (oreru)
 *Korean: [[부러지다]] (bureojida)
+*Portuguese: [[Quebrar]], [[Partir]]
 *Romanian: a (se) [[frânge]]
 *Russian: [[ломаться]]/[[сломаться]] (lomát's'a/slomát's'a)
 *Slovene: [[zlomiti se]]
@@ -117,6 +118,7 @@
 *Japanese: [[壊れる]] (kowareru)
 {{mid}}
 *Korean: [[부서지다]] (buseojida)
+*Portuguese: [[Quebrar]], [[Partir]]
 *Russian: [[ломаться]]/[[сломаться]] (lomát's'a/slomát's'a)
 *Slovene: [[pokvariti se]]
 *Swedish: [[gå sönder]]
@@ -132,6 +134,7 @@
 *Japanese: [[休憩する]] (kyūkei-suru)
 {{mid}}
 *Korean: [[쉬다]] (swida)
+*Portuguese: [[Pausar]]
 *Russian: [[делать]]/[[сделать]] [[перерыв]] (d'élat'/sd'élat' p'er'erýv)
 *Swedish: [[avbryta]], [[bryta]]
 {{bottom}}
@@ -170,6 +173,7 @@
 *Italian: [[rompere]]
 *Japanese: [[割る]] (waru), [[壊す]] (kowasu), [[砕く]] (kudaku)
 *Korean: [[부러뜨리다]] (bureotteurida), [[부수다]] (busuda)
+*Portuguese: [[Quebrar]], [[Partir]], [[Romper]] (if flexible)
 *Romanian: [[rupe]], [[frânge]]
 *Russian: [[разбивать]]/[[разбить]] (razbivát'/razbít')
 *Slovene: [[zlomiti]] (two pieces), [[razbiti]] (more pieces)
@@ -188,6 +192,7 @@
 {{mid}}
 *Japanese: [[ひびが入る]] (hibi-ga-hairu), [[折れる]] (oreru)
 *Korean: [[부러뜨리다]] (bureotteurida)
+*Portuguese: [[Quebrar]], [[Partir]]
 *Romanian: [[frânge]]
 *Russian: [[ломать]]/[[сломать]] (lomát'/slomát')
 *Slovene: [[zlomiti]]
@@ -205,6 +210,7 @@
 {{mid}}
 *Japanese: [[ひびが入る]] (hibi-ga-hairu), [[折れる]] (oreru)
 *Korean: [[부러뜨리다]] (bureotteurida)
+*Portuguese: [[Quebrar]], [[Partir]]
 *Russian: [[ломать]]/[[сломать]] (lomát'/slomát')
 *Slovene: [[zlomiti]]
 *Swedish: [[bryta]]
@@ -221,6 +227,7 @@
 {{mid}}
 *Japanese: [[壊す]] (kowasu), [[破壊する]] (hakai-suru)
 *Korean: [[부수다]] (busuda)
+*Portuguese: [[Estragar]], [[Partir]]
 *Russian: [[ломать]]/[[сломать]] (lomát'/slomát')
 *Slovene: [[pokvariti]]
 *Swedish: [[ha sönder]], [[ta sönder]]
@@ -238,6 +245,7 @@
 {{mid}}
 *Japanese: [[壊す]] (kowasu), [[破壊する]] (hakai-suru)
 *Korean: [[꺾다]] (kkeokkda)
+*Portuguese: [[Quebrar]]
 *Russian: [[ломать]]/[[сломать]] (lomát'/slomát')
 *Slovene: [[zlomiti]]
 *Swedish: [[bryta ned]]
@@ -254,6 +262,7 @@
 {{mid}}
 *Japanese: [[破る]] (yaburu), [[犯す]] (okasu)
 *Korean: [[깨다]] (kkaeda)
+*Portuguese: [[Desrespeitar]], [[Violar]]
 *Russian: [[наоушать]]/[[нарушить]] (narušát'/narúšit')
 *Slovene: [[prekršiti]]
 *Swedish: [[bryta]]
