/* Translations */  +greek <subtraction#2113688>

--- a/en/s/subtraction.26255.wikitext
+++ b/en/s/subtraction.26255.wikitext
@@ -17,7 +17,8 @@
 *Dutch: [[aftrekking]]
 *Estonian: [[lahutamine]]
 *Finnish: [[vähentäminen]]
-*French: [[soustraction]] ''f''
+*{{fr}}: {{t|fr|soustraction|f}}
+*{{el}}: {{t|el|αφαίρεση|f}}
 {{mid}}
 *Japanese: [[引き算]] (ひきざん, hikizan)
 *Polish: [[odejmowanie]] ''n''
