robot  Adding: [[el:bound]] <bound#2120134>

--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -121,6 +121,7 @@ Alteration of ''[[boun]]'', with '''-d''' partly for euphonic effect and partly 
 
 [[ar:bound]]
 [[et:bound]]
+[[el:bound]]
 [[fa:bound]]
 [[io:bound]]
 [[it:bound]]
