--- a/en/d/dud.26266.wikitext
+++ b/en/d/dud.26266.wikitext
@@ -17,6 +17,8 @@ Ultimately from ''[[dudde]]'' (ragged clothing''), of uncertain origin beyond th
 ----
 
 ==Bosnian==
+===Etymology===
+From Arabic {{ARchar|[[توت|تُوت]]}} (''tut'') via Turkish [[dut]].
 ===Noun===
 '''dud''' {{m}}
 #[[mulberry]]
@@ -36,6 +38,9 @@ Ultimately from ''[[dudde]]'' (ragged clothing''), of uncertain origin beyond th
 ----
 
 ==Serbian==
+
+===Etymology===
+From Arabic {{ARchar|[[توت|تُوت]]}} (''tut'') via Turkish [[dut]].
 
 ===Noun===
 '''dud''' {{m}}
