Checked definitions, added link to Wikipedia. <rabbit#2123383>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -1,6 +1,7 @@
 [[Image:Sylvilagus floridanus 14136.JPG|thumb|A rabbit (sense 1).]]
 ==English==
-
+{{wikipedia}}
+{{wikipedia|Leporidae}}
 ===Pronunciation===
 *[[w:AHD|AHD]]: (''UK, US'') răb'it, (''Australia'') răb'ət
 *[[w:IPA|IPA]]: (''UK, US'') /ˈræbɪt/, (''Australia'') /ˈræbət/
@@ -13,11 +14,10 @@ From Northern [[French]]
 ====Noun====
 {{en-noun}}
 
-# {{rfv-sense}} (''According to most sources, including Wikipedia, Leporidae is said to consist of hares AND rabbits'')  Any of several small [[mammal]]s, of the family ''[[Leporidae]]'', with long ears, long [[hind leg]]s and a short, [[fluffy]] tail.
+# Several small [[mammal]]s of the family ''[[Leporidae]]'' ('''rabbits''' and [[hare]]s), with long ears, long [[hind leg]]s and a short, [[fluffy]] tail. Confusingly, [[jackrabbit]] is a hare.
 #:''The pioneers survived by eating the small game they could get; '''rabbits''', squirrels and occasionally a raccoon.''
-# {{rfd-redundant}} Any of a number of [[small]] [[hare]]s.
 # The [[fur]] of a rabbit typically used to imitate another [[animal]]'s fur.
-# A [[runner]] in a [[distance]] [[race]] whose goal is mainly to set the [[pace]], either to [[tire]] a specific [[rival]] so that a [[teammate]] can [[win]] or to help another break a [[record]]; a [[pacesetter]].
+# A [[runner]] in a [[distance]] [[race]] whose goal is mainly to set the [[pace]], either to [[tire]] a specific [[rival]] so that a [[teammate]] can win or to help another break a [[record]]; a [[pacesetter]].
 # {{cricket}} A very poor [[batsman]]; selected as a [[bowler]] or [[wicket-keeper]].
 # {{rfv-sense}} {{colloquial}} Someone new to something.
 
@@ -39,7 +39,7 @@ From Northern [[French]]
 *Albanian: [[lepur i gropave]]
 *Arabic: {{ARchar|[[ارنب|أرْنَب]]}}
 *[[Basque]]: [[untxi]]
-*[[Belarusian]]: [[трусяня]]/[[трусяне]], [[трус]]
+*Belarusian: [[трусяня]]/[[трусяне]], [[трус]]
 *Bengali: {{BNchar|[[খরেগাশ]]}}
 *Bosnian: [[zec#Bosnian|zec]] {{m}}, [[kunić#Bosnian|kunić]] {{m}}
 *[[Breton]]: [[lapin]], [[konikl]]
@@ -111,6 +111,17 @@ From Northern [[French]]
 *Urdu: {{URchar|[[خرگوش#Urdu|خرگوش]]}} (<u>kh</u>argoš) {{m}}
 *[[Volapük]]: [[krolig]]
 *Welsh: [[cwningen]]
+{{trans-bottom}}
+
+{{trans-top|fur}}
+*Finnish: [[kaniturkis]], [[kani]]
+{{trans-bottom}}
+
+{{trans-top|pacesetter}}
+*Finnish: [[jänis]]
+{{trans-bottom}}
+
+{{trans-top|poor batsman}}
 {{trans-bottom}}
 
 ====Verb====
