--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -17,13 +17,13 @@
 {{trans-top|squirrel}}
 *Albanian: [[ketër]] {{m}}
 *Basque: [[katagorri]]
-*Belarussian: [[звачайная ваверка]]
+*Belarusian: [[звачайная ваверка]] {{f}}
 *Bosnian: [[vjeverica]] {{f}}
-*Breton: [[gwiñver]] {{m}} -ed {{p}}, [[kaz-koad]] {{m}} kizier-koad {{p}}
-*Bulgarian: [[катерица]] (katerica)
+*Breton: [[gwiñver]] {{m}}, -ed {{p}}, [[kaz-koad]] {{m}}, kizier-koad {{p}}
+*Bulgarian: [[катерица]] (katerica) {{f}}
 *Catalan: [[esquirol]] {{m}}
 *[[Cherokee]]: [[ᏌᎳᎵ]] (salali)
-*Chinese: [[松鼠]] sōngshǔ
+*Chinese: [[松鼠]] (sōngshǔ)
 *Croatian: [[vjeverica]] {{f}}
 *Czech: [[veverka]] {{f}}
 *Danish: [[egern]]
@@ -35,10 +35,10 @@
 *French: [[écureuil]] {{m}}
 *[[Frisian]]: [[iikhoarntsje]] {{g|Frisian}}
 *[[Friulian]]: [[sghirat]], [[sghirate]] {{g|Friulian}}
-*[[Galician]]: [[esquío]] {{g|Galician}}
-*German: [[Eichh&ouml;rnchen]] {{n}}, [[Hörnchen]] {{n}}
-*Greek: [[σκίουρος]] {{g|Greek}}
-*Hebrew: [[סנאי]] {{m}}
+*[[Galician]]: [[esquío]] {{m}}
+*German: [[Eichhörnchen]] {{n}}, [[Hörnchen]] {{n}}
+*Greek: [[σκίουρος]] {{m}}
+*Hebrew: [[סנאי]] (snai) {{m}}
 *Hungarian: [[mókus]]
 *Icelandic: [[íkorni]] {{g|Icelandic}}
 *[[Interlingua]]: [[sciuro]], [[scuriolo]]
@@ -46,38 +46,38 @@
 *Isthmus Zapotec: [[chisa]]
 *Italian: [[scoiattolo]] {{m}}
 *Japanese: [[栗鼠]] ([[りす]], risu)
-*Korean: [[다람쥐]] daramjwi
+*Korean: [[다람쥐]] (daramjwi)
 {{trans-mid}}
-*[[Ladino]]: [[schirata]] {{g|Ladino}}
+*[[Ladin]]: [[schirata]] {{f}}
 *Latin: [[sciurus]] {{m}}
 *Latvian: [[vāvere]] {{g|Latvian}}
 *Lithuanian: [[voverė]] {{f}}
-*[[Lower Sorbian]]: [[njewjericka]]
-*Macedonian: [[верверица]] ([[ververica]]) {{g|Macedonian}}
-*Maltese: [[skwiril]] {{g|Maltese}}
+*[[Lower Sorbian]]: [[njewjericka]] {{f}}
+*Macedonian: [[верверица]] (ververica) {{f}}
+*Maltese: [[skwiril]] {{m}}
 *Norwegian: [[ekorn]] {{n}}
-*[[Occitan]]: [[esquiròl]] {{g|Occitan}}
+*[[Occitan]]: [[esquiròl]] {{m}}
 *Polish: [[wiewiórka]] {{f}}
 *Portuguese: [[esquilo]] {{m}}
 *[[Powhatan]]: [[messanik]]
-*Romanian: [[veveriţă]] {{g|Romanian}}
-*[[Romansh]]: [[stgilat]] {{g|Romansh}}
-*[[Romany]]: [[viaveritsa]] {{f}}
-*Russian: [[белка]] ([[belka]]) {{f}}
+*[[Romani]]: [[viaveritsa]] {{f}}
+*Romanian: [[veveriţă]] {{f}}
+*[[Romansh]]: [[stgilat]] {{m}}
+*Russian: [[белка]] (bélka) {{f}}
 *[[Sami]]: [[oarri]]
-*Sardinian: [[schirrittu]], [[schirrimatta]], [[iscojàttulu]]
+*Sardinian: [[schirrittu]] {{m}}, [[schirrimatta]] {{f}}, [[iscojàttulu]] {{m}}
 *Scottish: [[feòrag]]
 *Serbian:
 *:Cyrillic: [[веверица]] {{f}}
-*:Latin: [[veverica]] {{f}}
-*Slovak: [[veverica]] {{g|Slovak}}
+*:Roman: [[veverica]] {{f}}
+*Slovak: [[veverica]] {{f}}
 *Slovenian: [[veverica]] {{f}}
 *Spanish: [[ardilla]] {{f}}
 *Swedish: [[ekorre]] {{c}}
 *[[Telugu]]: [[ఉడుత]] (uDuta)
 *Turkish: [[sincap]]
-*Ukrainian: [[білка]] ([[bilka]]) {{g|Ukrainian}}
-*[[Upper Sorbian]]: [[wjewjerčka]]
+*Ukrainian: [[білка]] (bílka) {{f}}
+*[[Upper Sorbian]]: [[wjewjerčka]] {{f}}
 *Welsh: [[gwiwer]] {{g|Welsh}}
 {{trans-bottom}}
 
