--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -1,5 +1,9 @@
 ==English==
 
+===Pronunciation===
+====Homophones====
+*[[seedy]]
+
 ==={{Initialism}}===
 '''CD'''
 # [[compact disk]]: A form of digital media that is based on the use of a laser to read from a plastic disc in a reader device known as a CD drive.  It comes in several varieties including the [[CD-ROM]] (ROM=read-only memory) which cannot be written to except during manufacturing, the [[CD-R]] (recordable), which can be written to exactly once, and the [[CD-RW]] (re-writable), which can be written to as many times as one wishes (to a limit).
@@ -10,10 +14,14 @@
 # [[Collision detection]]: used by an Ethernet network to detect when two computers are sending frames at the same time, and also to deal with such collisions when they happen
 # [[circular dichroism]]
 
+----
+
 ==Norwegian==
+
 ===Initialism noun===
 {{no-noun-irreg|m|CD'en|CD'er|CD'ene}}
-#[[#English|CD]] (disc)
+
+# [[#English|CD]] (disc)
 
 [[de:CD]]
 [[es:CD]]
