Translations [http://de.wikipedia.org/wiki/Benutzer:Nobelium] <at#2133433>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -34,8 +34,7 @@ Middle English < Old English '''[[æt]]''' < Proto-Germanic '''*at''', '''*az'''
 #: ''He shouted at her'' &mdash; (aggressively).
 
 ====Translations====
-'''at''' (in or very near a particular place)
-{{top}}
+{{trans-top|in or very near a particular place}}
 *Arabic: {{ARchar|[[عند]]}} ({{Unicode|[[ʕand]]}})  
 *[[Breton]]: [[e#Breton|e]]
 *Bulgarian: [[в#Bulgarian|в]] (v), [[на#Bulgarian|на]] (na), [[при#Bulgarian|при]] (pri), [[до#Bulgarian|до]] (do)
@@ -57,7 +56,7 @@ Middle English < Old English '''[[æt]]''' < Proto-Germanic '''*at''', '''*az'''
 *Italian: [[a#Italian|a]], [[in#Italian|in]]
 *Japanese: [[で]] (de), [[に]] (ni)
 *Korean: [[~에서]] (-eseo)
-{{mid}}
+{{trans-mid}}
 *[[Kurdish]]: Kurdish: [[li]] ([[Kurmanji]]), [[le]] ([[Soranî]])
 *Latin: ''[[locative]] case''
 *[[Novial]]: [[che]], [[an]], [[sur]]
@@ -81,10 +80,9 @@ Middle English < Old English '''[[æt]]''' < Proto-Germanic '''*at''', '''*az'''
 *Thai: {{THchar|[[ณ]]}} (nā)
 *Turkish: [[-da]], [[-de]]
 *Vietnamese: [[ở tại]], [[lúc]], [[vào]]
-{{bottom}}
+{{trans-bottom}}
 
-'''at''' (indicating time)
-{{top}}
+{{trans-top|indicating time}}
 *Arabic: {{ARchar|[[في]]}} (fi)
 *[[Breton]]: [[da#Breton|da]]
 *Bulgarian: [[в#Bulgarian|в]] (v)
@@ -99,7 +97,7 @@ Middle English < Old English '''[[æt]]''' < Proto-Germanic '''*at''', '''*az'''
 *Greek: [[στον]] (ston) {{m}}, [[στη]] (sti) {{f}}, [[στο]] (sto) {{n}}; [[στους]] (stous) ''m pl'', [[στις]] (stis) ''f pl'', [[στα]] (sta) ''n pl''
 *Hungarian: [[-kor]] ''([[temporalis case]])''
 *[[Interlingua]]: [[a#Interlingua|a]]
-{{mid}}
+{{trans-mid}}
 *Italian: [[a#Italian|a]]
 *Japanese: [[に]] (ni)
 *[[Kurdish]]: Kurdish: [[li]] ([[Kurmanji]]), [[le]] ([[Soranî]])
@@ -114,10 +112,9 @@ Middle English < Old English '''[[æt]]''' < Proto-Germanic '''*at''', '''*az'''
 *Swedish: [[vid]]
 *:''At five o’clock'' = klockan fem ''or'' vid fem (''informal'')
 *:''At midnight'' = vid midnatt
-{{bottom}}
+{{trans-bottom}}
 
-'''at''' (in the direction of)
-{{top}}
+{{trans-top|in the direction of}}
 *Arabic: {{ARchar|[[في]]}} (fi)
 *Bulgarian: [[в#Bulgarian|в]] (v), [[на#Bulgarian|на]] (na)
 *Chinese: [[在]] (zài)
@@ -132,7 +129,7 @@ Middle English < Old English '''[[æt]]''' < Proto-Germanic '''*at''', '''*az'''
 *Greek: [[στον]] (ston) {{m}}, [[στη]] (sti) {{f}}, [[στο]] (sto) {{n}}; [[στους]] (stous) ''m pl'', [[στις]] (stis) ''f pl'', [[στα]] (sta) ''n pl''
 *Hungarian: [[-t]] (''[[accusative case]]'')
 *[[Interlingua]]: [[a#Interlingua|a]]
-{{mid}}
+{{trans-mid}}
 *Irish: [[ag#Irish|ag]]
 *Italian: [[a#Italian|a]]
 *Japanese: [[に]] (ni), [[を]] (o)
@@ -150,7 +147,7 @@ Middle English < Old English '''[[æt]]''' < Proto-Germanic '''*at''', '''*az'''
 *:Han kastade sten mot mig = ''He threw stones at (=towards) me''
 *:Han kastade sten på mig = ''He threw stones at me'' (''...and hit me'')
 *Thai: {{THchar|[[ณ]]}} (nā)
-{{bottom}}
+{{trans-bottom}}
 
 ===Noun===
 '''at'''
