--- a/en/κ/κύων.4255.wikitext
+++ b/en/κ/κύων.4255.wikitext
@@ -1,15 +1,29 @@
 ==Ancient Greek==
 
 ===Etymology===
-:[[Indoeuropean|IE]] ''kwon-'', dog (same origin as ''[[hound]]'', [[Latin|Lat.]] ''[[canis]]'', [[German]] ''[[Hund]]''.)
+From [[Indoeuropean|IE]] ''kwon-'', cognate with [[hound]], {{lat}} [[canis]], {{deu}} [[Hund]].
 
 ===Pronunciation===
-{{IPA|[ˈkyon] / [ˈkion] / [ˈkio̞n] / [ˈcio̞n]}}
+*{{italbrac|Classical}} {{IPA|/ky̌ɔ̂ːn/}}
+*{{italbrac|Koine}} {{IPA|/ˈkuon/}}
 
 ===Noun===
-{{grc-noun|κυνός|m|third|kyōn}}
+{{grc-noun|κυνός|m & f|third|kyōn|κυων}}
 
-#[[dog]].
+# [[dog]]
+# [[bitch]] (in both technical and pejorative senses)
+# offensive person
+
+====Inflection====
+{{grc-decl-3rd-ln|κύων|κυν|κύν|κυ|κύον}}
+
+====Usage notes====
+The alternate forms [[κύων]] (vocative singular) and [[κύνεσσι]] (dative plural) also exist.
+
+====References====
+*[[w:LSJ|LSJ]]
+*[[w:Bauer lexicon|Bauer lexicon]]
+{{Strong's|G|2965}}
 
 [[el:κύων]]
 [[fr:κύων]]
