--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -11,7 +11,7 @@ Partly imitative, also influenced by [[burble]].
 {{en-noun}}
 
 #A [[spherical]]ly [[contained]] [[volume]] of air, especially one made from [[soapy]] liquid.
-#A small spherical cavity in a solid material.
+#A small spherical [[cavity]] in a solid material.
 #Anything resembling a [[hollow]] sphere.
 #A period of intense [[speculation]] in a market, causing prices to rise quickly to [[irrational]] levels as the [[metaphorical]] bubble expands, and then fall even more quickly as the bubble bursts.
 
@@ -21,7 +21,7 @@ Partly imitative, also influenced by [[burble]].
 *Finnish: [[kupla]]
 *French: [[bulle]] {{f}} (1,4), [[trou]] {{m}} (2)
 *German: [[Blase]] {{f}}
-*Hebrew: [[בועה]] (bu'a) ''f'' (1,4)
+*Hebrew: [[בועה]] (bu'a) {{f}} (1,4)
 *Hungarian: [[buborék]]
 *Indonesian: [[gelembung]]
 {{trans-mid}}
