/* Translations to be checked */ isthmus zapotec <bamboo#2141832>

--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -62,6 +62,7 @@ The translations below need to be checked by native speakers and inserted into t
 
 *{{ttbc|CJK Characters}}: [[篳]], [[筚]]
 *{{ttbc|Chinese}}: [[竹子]]
+*{{ttbc|Isthmus Zapotec}}: [[bixiá]]
 *{{ttbc|Korean}}: [[대나무]]
 *{{ttbc|Polish}}: [[bambus]] ''m''
 
