--- a/en/a/anaclitism.856469.wikitext
+++ b/en/a/anaclitism.856469.wikitext
@@ -1,7 +1,7 @@
 {{unreferenced|date=June 2006}} 
 In the field of [[sexology]], '''anaclitism''' involves deriving adult [[sexual arousal]] from objects that one was exposed to as an infant. The [[Sexual fetishism|fetish]] value often stems from tactile stimulation similar to that experienced by the infant before it could see well.
 
-Anaclitism is closely related to the phenomenon of [[infantilism]], also known by the terms [[adult baby]]ism and [[autonepiophilia]].
+Anaclitism is closely related to [[diaper fetishism]] and [[infantilism]], also known by the terms [[adult baby]]ism and [[autonepiophilia]].
 
 == See also ==
 * [[Sexual imprinting]]
