--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -4,6 +4,7 @@
 
 # The act of [[consume|consuming]] something.  ''The fire's consumption of the forest caused ecological changes.''
 # The amount [[consume|consumed]].  ''gross national consumption''
+# [[pulmonary]] [[tuberculosis]]
 # {{pathology}} {{obsolete}} [[tuberculosis|Tuberculosis]].
 
 ====Translations====
