Reverted edits by [[Special:Contributions/75.86.225.200|75.86.225.200]] ([[User_talk:75.86.225.200|Talk]]); changed back to last version by [[User:Mike|Mike]] <quadrant#2165033>

--- a/en/q/quadrant.4317.wikitext
+++ b/en/q/quadrant.4317.wikitext
@@ -1,63 +1,6 @@
 ==English==
 
-=verb
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+===Noun===
 {{en-noun}}
 
 # One of the four [[section]]s made by dividing an area with two perpendicular lines.
