--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -1,7 +1,8 @@
-[[Image:Soap Bubble - foliage background - iridescent colours - Traquair 040801.jpg|thumb|right|Soap bubbles.]]
+{{wikipedia}}
 ==English==
 
 ===Etymology===
+[[Image:Soap Bubble - foliage background - iridescent colours - Traquair 040801.jpg|thumb|right|Soap bubbles.]]
 Partly imitative, also influenced by [[burble]].
 
 ===Pronunciation===
