--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -27,7 +27,7 @@ Sometimes explained as deriving from copper buttons or badges of early [[NYPD]] 
 ====Noun====
 {{en-noun}}
 
-# (slang) Constable, Sheriff, Police, Prison Guard.
+# (slang) Constable's, Sheriff's, Police, Prison Guard's, Law Enforcement Officers.
 
 ====Translations====
 *Norwegian: [[purk]] {{m}}
