--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -54,6 +54,7 @@ Old English ''[[leþer]]''
 {{en-adj-notcomp}}
 
 # Made of leather.
+# Referring to one who wears leather clothing (motorcycle jacket, chaps over 501 jeans, boots), especially as a sign of sadomasochistic homosexuality. 
 
 ====See also====
 * [[leathern]], [[leathery]]
