--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -20,14 +20,14 @@ From {{L.}} and Old French  ''[[capere]]'' to capture.
 *[[cop out]], [[cop-out]]
 
 ===Etymology 2===
-Short for Constable On Patrol, itself from “cop” above (“one who cops”, e.g. criminals).  
+Short for [[copper]] “police officer”, itself from “cop” above (“one who cops”, e.g. criminals).  
 
 Sometimes explained as deriving from copper buttons or badges of early [[NYPD]] uniforms, though this is often stated to be a [[folk etymology]].
 
 ====Noun====
 {{en-noun}}
 
-# (slang) Constable's, Sheriff's, Police, Prison Guard's, Law Enforcement Officers.
+# (slang) [[police officer|Police officer]].
 
 ====Translations====
 *Norwegian: [[purk]] {{m}}
