--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -19,15 +19,22 @@ From {{L.}} and Old French  ''[[capere]]'' to capture.
 *[[cop on]]
 *[[cop out]], [[cop-out]]
 
-===Etymology 2===
-Short for [[copper]] “police officer”, itself from “cop” above (“one who cops”, e.g. criminals).  
+Etymology 2
+Short for Constable On Patrol
 
-Sometimes explained as deriving from copper buttons or badges of early [[NYPD]] uniforms, though this is often stated to be a [[folk etymology]].
+Sometimes explained as deriving from copper buttons or badges of early NYPD uniforms, though this is often stated to be a folk etymology.
 
-====Noun====
-{{en-noun}}
 
-# (slang) [[police officer|Police officer]].
+Noun
+Singular
+cop
+  Plural
+cops
+ 
+
+cop (plural cops)
+
+(slang) Constable's, Sheriff's, Police, Prison Guard's, Law Enforcement Officers. 
 
 ====Translations====
 *Norwegian: [[purk]] {{m}}
