/* Translations */ It <again#2176606>

--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -38,10 +38,10 @@ Old English ''[[onġean]]''
 *Hebrew: [[שוב]] (šuv)
 *Hungarian: [[újra]], [[megint]], [[ismét]]
 *Icelandic: [[aftur]]
-{{mid}}
 *[[Ido]]: [[ankore un foyo]], [[ankorfoye]]
 *Indonesian: [[lagi]]
-*Italian: di [[nuovo]]
+*Italian: [[di nuovo]], [[ancora]]
+{{mid}}
 *Japanese: [[また]] (mata), [[再び]] (ふたたび, futatabi)
 *Korean: [[다시]] (dasi)
 *Polish: [[ponownie]], [[jeszcze raz]], [[znowu]]
