--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -72,6 +72,7 @@
 [[it:advertisement]]
 [[kk:advertisement]]
 [[hu:advertisement]]
+[[ja:advertisement]]
 [[pt:advertisement]]
 [[simple:advertisement]]
 [[sk:advertisement]]
