--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -65,6 +65,7 @@ From Northern [[French]]
 *Hindi: [[ख़रगोश]] (<u>kh</u>argoš) {{m}}, [[ख़रगोशनी]] (<u>kh</u>argošanī) {{f}}
 *Hungarian: [[nyúl]]
 *Icelandic: [[kanína]]
+*Indonesian: [[kelinci]]
 *[[Interlingua]]: [[conilio]]
 *Irish: [[coinín]]
 *Italian: [[coniglio]] {{m}}
@@ -81,6 +82,7 @@ From Northern [[French]]
 *Lithuanian: [[triušis]]
 *[[Lower Sorbian]]: [[karnikel]]
 *Macedonian: [[питом заjак]] (pitom zajak)
+*Malay: [[arnab]]
 *Maltese: [[fenek]]
 *Norwegian: [[kanin]] {{m}}
 *[[Occitan]]: [[conilh]], [[lapin]]
