--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -25,25 +25,11 @@ From Middle English, from Old English ''[[þing]]''.
 #: ''Get me a thing of [[apple juice]] at the store.''
 # In [[Scandinavian]] countries, a [[legislative]] or [[judicial]] [[assembly]].
 # ''(in certain fixed expressions)'' A [[problem]], [[dilemma]], or [[complicating]] [[factor]].
+# {{context|U.S. slang}} A [[penis]].
 
 ====Synonyms====
 *[[stuff]] ([[uncountable]] equivalent)
 *[[yoke]] ([[Ireland]])
-
-====Derived terms====
-{{top2}}
-*[[anything]]
-*[[everything]]
-*[[here's the thing]]
-*[[nothing]]
-*[[something]]
-{{mid2}}
-*[[the thing is]]
-*[[thingamajig]]<!-- various spellings -->
-*[[thingness]]
-*[[thingo]]
-*[[thingy]]
-{{bottom}}
 
 ====Translations====
 {{trans-top|a separate entity or concept}}
@@ -161,6 +147,21 @@ From Middle English, from Old English ''[[þing]]''.
 {{trans-mid}}
 *Swedish: [[ting]] {{n}}
 {{trans-bottom}}
+
+====Derived terms====
+{{top2}}
+*[[anything]]
+*[[everything]]
+*[[here's the thing]]
+*[[nothing]]
+*[[something]]
+{{mid2}}
+*[[the thing is]]
+*[[thingamajig]]<!-- various spellings -->
+*[[thingness]]
+*[[thingo]]
+*[[thingy]]
+{{bottom}}
 
 [[Category: Metasyntactic words]]
 [[Category:1000 English basic words]]
