Added Hebrew translations <quadrilateral#2193213>

--- a/en/q/quadrilateral.4319.wikitext
+++ b/en/q/quadrilateral.4319.wikitext
@@ -7,27 +7,32 @@
 # a [[polygon]] having four sides.
 
 ====Translations====
-{{top}}
+{{trans-top|a polygon having four sides}}
 *Dutch: [[vierhoek]]
 *[[Hindi]]: [[चतुर्भुज]] 
 *Italian: [[quadrilatero]] ''m''
 *French: [[quadrilatère]]
-{{mid}}
 *German: [[Viereck]]
+*Hebrew: {{he-translation|מרובע|merubá}} {{m}}
+{{trans-mid}}
 *Japanese: [[四辺形]] (shihenkei)
 *Romanian: [[patrulater]], [[cadrilater]]
 *Telugu: [[చతుర్భుజి]] (chaturbhuji)
-{{bottom}}
+{{trans-bottom}}
 
 ===Adjective===
 '''quadrilateral'''
 # having four sides.
 
 ====Translations====
+{{trans-top|having four sides}}
 *Dutch: [[vierhoekig]]
-*[[Irish]]: [[ceathairshleasach]]
+*Hebrew: {{he-translation|מרובע|merubá}} {{m}}
 *[[Hindi]]: [[चतुर्भुजीय]]
+*[[Irish]]: [[ceathairshleasach]]
 *Italian: [[quadrilatero]]
+{{trans-mid}}
+{{trans-bottom}}
 
 [[io:quadrilateral]]
 [[pl:quadrilateral]]
