--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -128,6 +128,7 @@ Alteration of ''[[boun]]'', with '''-d''' partly for euphonic effect and partly 
 [[et:bound]]
 [[el:bound]]
 [[fa:bound]]
+[[fr:bound]]
 [[io:bound]]
 [[it:bound]]
 [[hu:bound]]
