--- a/en/a/American English.34094.wikitext
+++ b/en/a/American English.34094.wikitext
@@ -10,7 +10,8 @@
 {{top}}
 *[[Chinese]]: [[美國英語]] (traditional); [[美国英语]] (simplified)
 *Finnish: [[amerikanenglanti]]
-*[[French]]: [[anglais américain]] ''m''
+*French: [[anglais américain]] ''m''
+*German: [[Amerikanisches Englisch]]
 {{mid}}
 *[[Korean]]: [[미국 영어]] ([[美國英語]])
 *[[Swedish]]: [[amerikansk engelska]]
