--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -24,6 +24,7 @@ The word ''weasel'' is the direct descendant of Old English ''wesule'', ''wesle'
 *[[Breton]]: [[kaerell]]
 *Bulgarian: [[невестулка]] ([[nevestulka]])
 *[[Catalan]]: [[mostela]] ''f''
+*[[Chinese]]: [[黄鼠狼]]
 *Croatian: [[lasica]]
 *Czech: [[lasice]], [[kolčava]]
 *Danish: [[brud]]
