robot  Adding: [[hu:crook]] <crook#2199286>

--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -40,10 +40,12 @@
 
 # {{cattag|Australian English}} [[ill]], [[sick]]
 [[category:English nouns]]
+
 [[bg:crook]]
 [[et:crook]]
 [[io:crook]]
 [[it:crook]]
+[[hu:crook]]
 [[ru:crook]]
 [[fi:crook]]
 [[vi:crook]]
