--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -33,7 +33,7 @@ Sometimes explained as deriving from copper buttons or badges of early [[NYPD]] 
 *Norwegian: [[purk]] {{m}}
 *Polish: [[gliniarz]] {{m}}, [[glina]] {{m}}
 *Slovak: [[poliš]] {{m}}, [[hekáč]] {{m}}
-*Spanish: [[tombo]] {{m}}
+*Spanish: [[tombo]] {{m}}, [[paco]] {{m}}
 
 ----
 
