format updated <American English#2210608>

--- a/en/a/American English.34094.wikitext
+++ b/en/a/American English.34094.wikitext
@@ -1,22 +1,24 @@
 ==English==
 {{wikipedia}}
+
 ===Proper noun===
 {{en-proper noun|sg=[[American]] [[English]]}}
+
 # A [[dialect]] of the [[English]] language that is chiefly spoken in the [[United States]].
 #: Compare [[British English]].
 # An [[orthography]] of the English language that is chiefly used in the United States.  Compare [[Commonwealth English]].
 
 ====Translations====
-{{top}}
+{{trans-top|American English}}
 *[[Chinese]]: [[美國英語]] (traditional); [[美国英语]] (simplified)
 *Finnish: [[amerikanenglanti]]
-*French: [[anglais américain]] ''m''
+*French: [[anglais américain]] {{m}}
 *German: [[Amerikanisches Englisch]]
-{{mid}}
+{{trans-mid}}
 *[[Korean]]: [[미국 영어]] ([[美國英語]])
 *[[Swedish]]: [[amerikansk engelska]]
 *[[Russian]]: американский английский
-{{bottom}}
+{{trans-bottom}}
 
 [[Category:Regional English]]
 [[category:Dialects]]
