--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -6,7 +6,7 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 
 ===Pronunciation===
 *{{audio|en-us-division.ogg|Audio (US)}}
-*:Rhymes: [[Rhymes:English:-ɪʒən|-ɪʒən]]
+*{{rhymes|ɪʒən}}
 
 ===Noun===
 {{en-noun|s|-}}
