--- a/en/κ/κύων.4255.wikitext
+++ b/en/κ/κύων.4255.wikitext
@@ -29,4 +29,5 @@ The alternate forms [[κύων]] (vocative singular) and [[κύνεσσι]] (dat
 [[fr:κύων]]
 [[ko:κύων]]
 [[it:κύων]]
+[[ku:κύων]]
 [[pt:κύων]]
