--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -84,6 +84,7 @@ From Northern [[French]]
 *Macedonian: [[питом заjак]] (pitom zajak)
 *Malay: [[arnab]]
 *Maltese: [[fenek]]
+*Mylanian: [[lapin|coniège]] {{m}}
 *Norwegian: [[kanin]] {{m}}
 *[[Occitan]]: [[conilh]], [[lapin]]
 *Persian: {{FAchar|[[خرگوش#Persian|خرگوش]]}} (<u>kh</u>ærguš)
