--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -43,6 +43,9 @@
 *Albanian: [[derr]]
 *[[Amuzgo]]: [[kítzku]]
 *Arabic: {{ARchar|[[خنزير]]}} (χanzí:r) {{m}}
+*Aramaic:
+*:Syriac: [[ܚܙܝܪܐ]] (khzīrā, khzīro) {{m}}, [[ܚܙܝܪܬܐ]] (khzīrtā, khzīrto) {{f}}
+*:Aramaic: [[חזירא]] (khzīrā, khzīro) {{m}}, [[חזירתא]] (khzīrtā, khzīrto) {{f}}
 *Basque: [[urde]], [[zerri]], [[txerri]]
 *Belarusian: [[свіння]] (svinnja) {{f}}
 *Bosnian: [[svinja]] {{f}}
@@ -77,10 +80,10 @@
 *[[Interlingua]]: [[porco#Interlingua|porco]]
 *Irish: [[muc]]
 *Italian: [[maiale]] {{m}}, [[porco#Italian|porco]] {{m}}
+{{mid}}
 *Japanese: [[豚]] ([[ぶた]], buta)
 *Korean: [[돼지]] (dwaeji)
 *[[Ladin]]: [[porcel]]
-{{mid}}
 *Latin: [[sus]], [[porcus]] <!--do not put the scientific name here-->
 *Latvian: [[cūka]] {{f}}
 *Lithuanian: [[kiaulė]]
