--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -18,6 +18,7 @@
 *Finnish: [[mädäntyä]]
 *French: [[pourrir]]
 {{mid}}
+*Romanian: [[putrezi]], [[descompune]]
 *Spanish: [[pudrir]], [[podrir]]
 *Swedish: [[ruttna]]
 {{bottom}}
