robot  Adding: [[tr:rot]] <rot#2224083>

--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -181,4 +181,5 @@ Common Germanic *''[[raudhaz]]'', whence also Old English ''[[rēad]]'', Old Nor
 [[sv:rot]]
 [[ta:rot]]
 [[vi:rot]]
+[[tr:rot]]
 [[zh:rot]]
