--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -111,4 +111,5 @@ The suffix has been used since around the 17th and 18th century. It is believed 
 [[nl:qua]]
 [[pt:qua]]
 [[vi:qua]]
+[[tr:qua]]
 [[zh:qua]]
