--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -7,7 +7,7 @@
 *:{{rhymes|ɪd}}
 
 ===Etymology 1===
-From {{OE.}} verb ''[[biddan]]'' ‘ask, demand’. Conflation exists with {{OE.}} verb ''[[beodan|bēodan]]'' ‘offer, announce’
+From {{OE.}} verb ''[[biddan]]'' ‘ask, demand’. Conflation from {{OE.}} verb ''[[beodan|bēodan]]'' ‘offer, announce’
 
 ====Verb====
 {{en-verb|bids|bidding|bade|bidden}}
@@ -21,7 +21,7 @@ From {{OE.}} verb ''[[biddan]]'' ‘ask, demand’. Conflation exists with {{OE.
 #:'''1999:''' "[H]e walked up to the village of Wall and '''bade''' good morning to the guards on the gate." &mdash; ''Stardust'', Neil Gaiman, page 15 (2001 Perennial Edition).
 
 ===Etymology 2===
-From {{OE.}} verb ''[[beodan|bēodan]]'' ‘offer, announce’. Conflation exists with {{OE.}} verb ''[[biddan]]'' ‘ask, demand’.
+From {{OE.}} verb ''[[beodan|bēodan]]'' ‘offer, announce’. Conflation from {{OE.}} verb ''[[biddan]]'' ‘ask, demand’.
 
 ====Verb====
 {{en-verb|bids|bidding|bid|bid}}
