--- a/en/m/multiplication.26254.wikitext
+++ b/en/m/multiplication.26254.wikitext
@@ -5,39 +5,36 @@
 *:Rhymes: [[Rhymes:English:-eɪʃǝn|-eɪʃǝn]]
 
 ===Noun===
-'''multiplication''' (''[[uncountable]] and [[countable]]; ''plural'' '''multiplications''')
+{{en-noun|s|-}}
 
-#<!--Def1-->{{mathematics}} (''uncountable'') The process of multiplying two or more numbers, or, by analogy, any other similar [[binary operation]] for combining other mathematical objects.<!--
+#<!--Def1-->{{context|uncountable|arithmetic|mathematics}} The process of computing the sum of a number with itself a specified number of times, or any other [[analogous]] [[binary operation]] that combines other [[mathematical object]]s.<!--
 When applied to whole numbers, multiplication can be considered as repeated addition.  The multiplication  ''x &times; y''  is the same as  ''x + x + ... + x'',  where the  ''x''  appears  ''y'' times in the addition, or  ''y + y + ... + y'',  where the  ''y''  appears  ''x''  times in the addition.-->
-#<!--Def2-->{{arithmetic}} (''countable'') A calculation involving multiplication.
+#<!--Def2-->{{context|countable|arithmetic}} A calculation involving multiplication.
 #:''The teacher set us ten multiplications as homework.''
 
 ====Translations====
-
-<!--Def1-->'''process'''
-{{top}}
-*Chinese character: [[乘]] / [[乗]]
+{{trans-top|process}}<!--Def1-->
+*Chinese Characters: [[乘]] / [[乗]]
 *Chinese: [[乘法]] (chéng fǎ)
-*Dutch: [[vermenigvuldiging]] ''f''
+*Dutch: [[vermenigvuldiging]] {{f}}
 *Estonian: [[korrutamine]]
 *Finnish: [[kertolasku]]
-*French: multiplication ''f''
+*French: multiplication {{f}}
 *[[Frisian]]: [[fermannichfâldiging]]
-{{mid}}
-*German: [[Multiplikation]] ''f''
-*Italian: [[moltiplicazione]] ''f''
+{{trans-mid}}
+*German: [[Multiplikation]] {{f}}
+*Italian: [[moltiplicazione]] {{f}}
 *Japanese: [[掛け算]] (かけざん), [[乗法]] (じょうほう)
-*Polish: [[mnożenie]] ''n''
+*Polish: [[mnożenie]] {{n}}
 *Russian: [[умножение]]
-*Spanish: [[multiplicación]] ''f''
-*Swedish: [[multiplikation]] ''c''
-*Telugu: [[గుణకారం]] (guNakaaram)
-{{bottom}}
+*Spanish: [[multiplicación]] {{f}}
+*Swedish: [[multiplikation]] {{c}}
+*[[Telugu]]: [[గుణకారం]] (guNakaaram)
+{{trans-bottom}}
 
-<!--Def2-->'''sum'''
-{{top}}
-{{mid}}
-{{bottom}}
+{{trans-top|calculation}}
+{{trans-mid}}
+{{trans-bottom}}
 
 ====Derived terms====
 *[[cross-multiplication]]
@@ -52,6 +49,7 @@ When applied to whole numbers, multiplication can be considered as repeated addi
 *[[multiply]]
 
 ----
+
 ==French==
 
 ===Pronunciation===
