--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -81,6 +81,7 @@ Middle English [[þoȝ]], borrowed from a Scandinavian source such as Old Norse 
 [[io:though]]
 [[it:though]]
 [[hu:though]]
+[[pl:though]]
 [[simple:though]]
 [[fi:though]]
 [[ta:though]]
