--- a/en/p/PTO.26209.wikitext
+++ b/en/p/PTO.26209.wikitext
@@ -14,3 +14,4 @@
 ====Translations====
 *French: TSVP (''[[tourner|tournez]] [[s'il vous plaît]]'') (1)
 *German: b.w. (''[[bitte]] [[wenden]]'') (1)
+:[[Zapfwelle]] (3)
