--- a/en/ι/ιταλικός.4256.wikitext
+++ b/en/ι/ιταλικός.4256.wikitext
@@ -1,32 +1,17 @@
-==Greek (modern)==
-*[[IPA]] [itali'kos]
+==Greek==
 
-=== Etymology ===
+===Etymology===
 From '''[[Ιταλία]]''' (Italia), ''[[Italy]]'', from Latin '''[[Italia]]''', + adjective suffix '''[[-ικός]]''' (-ikos)
+
+===Pronunciation===
+*{{IPA|/itali'kos/}}
 
 ===Adjective===
 '''ιταλικός''' ''m'' (''f'' ιταλική, ''n'' ιταλικό)
 
 #[[Italian]], pertaining to [[Italy]]
 
-==== Translations ====
-See English entry ''[[Italian]]''
-
-<!-- Translations go under English entry
-
-*Bulgarian: [[италиански]] ''m'', италианска ''f'', италианско ''n'', италиански ''pl''
-*[[Esperanto]]: [[itala]]
-*French: [[italien]] ''m'', [[italienne]] ''f''
-*German: [[italienisch]]
-*[[Interlingua]]: [[italian]]
-*Polish: [[włoski]]
-*Portuguese: [[italiano]] ''m'', [[italiana]] ''f''
-*Russian: [[италянский]]
-*Serbian and [[Croatian]]: [[talijanski]]
-*Slovenian: [[italijanski]]
-*Spanish: [[italiano]]
-*Swedish: [[italienisk]]
--->
+[[Category:Greek adjectives]]
 
 [[el:ιταλικός]]
 [[fr:ιταλικός]]
