--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -45,7 +45,7 @@
 *Irish: [[iora]], [[madra crainn]] {{g|Irish}}
 *Isthmus Zapotec: [[chisa]]
 *Italian: [[scoiattolo]] {{m}}
-*Japanese: [[栗鼠]] (りす, risu)
+*Japanese: 栗鼠 (りす, risu)
 *Korean: [[다람쥐]] (daramjwi)
 {{trans-mid}}
 *[[Ladin]]: [[schirata]] {{f}}
