--- a/en/ι/ιταλικός.4256.wikitext
+++ b/en/ι/ιταλικός.4256.wikitext
@@ -1,15 +1,15 @@
 ==Greek==
 
 ===Etymology===
-From '''[[Ιταλία]]''' (Italia), ''[[Italy]]'', from Latin '''[[Italia]]''', + adjective suffix '''[[-ικός]]''' (-ikos)
+From ''[[Ιταλία]]'' (Italia), ‘Italy’, from {{L.|el}} ''[[Italia]]'', + adjective suffix ''[[-ικός]]'' (-ikos).
 
 ===Pronunciation===
-*{{IPA|/itali'kos/}}
+* {{IPA|/itali'kos/}}
 
 ===Adjective===
-'''ιταλικός''' ''m'' (''f'' ιταλική, ''n'' ιταλικό)
+'''ιταλικός''' {{m}} ({{f}} ιταλική, {{n}} ιταλικό)
 
-#[[Italian]], pertaining to [[Italy]]
+# [[Italian]], pertaining to [[Italy]]
 
 [[Category:Greek adjectives]]
 
