--- a/en/a/anaclitism.856469.wikitext
+++ b/en/a/anaclitism.856469.wikitext
@@ -3,7 +3,7 @@ In the field of [[sexology]], '''anaclitism''' involves deriving adult [[sexual 
 
 Anaclitism is closely related to [[diaper fetishism]] and [[infantilism]], also known by the terms [[adult baby]]ism and [[autonepiophilia]].
 
-In Freudian theory, by contrast, anaclitic (or anaclisis) refers to the relation between bodily functions in early childhood and the later development of the sexual instinct.  The infant's bodily function of simple hunger and suckling at the breast, to take a primary example, is at first attached directly to the mother's breast.  After breastfeeding is no longer a part of the child's life, however, "the need for repeating the sexual satisfaction...becomes detached from the need for taking nourishment" and the sexual instinct becomes auto-erotic.(Laplanche and Pontalis 30, 1973).  Thus, following Freud, we can speak of the sexual instincts functioning in anaclisis with the human subject's first needs of self-preservation.
+In Freudian theory, by contrast, anaclitic (or anaclisis) refers to the relation between bodily functions in early childhood and the later development of the sexual instinct.  The infant's bodily function of simple hunger, to take a primary example, is at first attached solely to the act of suckling at mother's breast.  Any sexual satisfaction that arises from this act, for the infant, is attached solely to a bodily function necessary for the preservation of life.  After breastfeeding is no longer a part of the child's life, however, "the need for repeating the sexual satisfaction...becomes detached from the need for taking nourishment" and the sexual instinct becomes auto-erotic, distinct from the needs of self-preservation.(Laplanche and Pontalis 30, 1973).  In other words, though the sexual instinct is innate (i.e., hardwired into the human animal), it is only called into action via the infant's initial, basic bodily needs.
 
 == See also ==
 * [[Sexual imprinting]]
