--- a/en/q/quadrant.4317.wikitext
+++ b/en/q/quadrant.4317.wikitext
@@ -4,8 +4,8 @@
 {{en-noun}}
 
 # One of the four [[section]]s made by dividing an area with two perpendicular lines.
-#{{mathematics}} The four regions of the [[Cartesian plane]] bounded by the [[x-axis]] and [[y-axis]]. 
-#{{geometry}} One [[fourth]] of a [[circle]] or [[disc]]; a sector with an [[angle]] of 90&deg;. 
+#{{mathematics}} The four regions of the [[Cartesian plane]] bounded by the [[x-axis]] and [[y-axis]].
+#{{geometry}} One [[fourth]] of a [[circle]] or [[disc]]; a sector with an [[angle]] of 90&deg;.
 #{{nautical}} A [[measuring]] [[device]] with a graduated arc of 90&deg; used in locating an altitude.
 
 ====Translations====
@@ -41,7 +41,7 @@
 {{mid}}
 {{bottom}}
 
-===See also===
+====See also====
 *[[octant]]
 *[[sextant]]
 *[[w:Quadrant|Wikipedia article on Quadrant]]
