--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -31,6 +31,7 @@ From [[Middle English]] ''[[fraccioun]]'' (a breaking), from [[Anglo-Norman]], f
 ====Translations====
 '''part of a whole'''
 {{top}}
+*Czech: [[zlomek]] {{m}}
 *Catalan: [[fracció]], {{f}}
 *Finnish: [[murto-osa]]
 *French: [[fraction#French|fraction]] {{f}}
@@ -43,6 +44,7 @@ From [[Middle English]] ''[[fraccioun]]'' (a breaking), from [[Anglo-Norman]], f
 
 '''in arithmetic'''
 {{top}}
+*Czech: [[zlomek]] {{m}}
 *Catalan: [[fracció]], {{f}}
 *Finnish: [[murtoluku]]
 *French: [[fraction#French|fraction]] {{f}}
