--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -31,6 +31,11 @@
 *[[endangered species]]
 
 ====Translations====
+{{trans-top|rank in a taxonomic classification}}
+*Czech: [[druh]] {{m}}
+{{trans-mid}}
+{{trans-bottom}}
+
 {{top}}
 *Catalan: [[espècie]], {{f}}
 *Chinese: [[種]], [[种]] (zhǒng); [[類]], [[类]] (lèi); [[種類]], [[种类]] (zhǒnglèi)
