--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -1,5 +1,6 @@
 {{wikipedia}}
 ==English==
+
 ===Etymology===
 {{L.}} ''species'' [[view]]; [[appearance]]; [[vision]]; [[dream]]; [[semblance]] ''specere'' to [[see]] + ''-ies'' suffix signifying [[abstract]] noun
 
@@ -9,7 +10,6 @@
 *{{audio|en-us-species.ogg|Audio (US)}}
 
 ===Noun===
-
 {{en-noun|species}}
 
 # A group of plants or animals having [[similar]] [[appearance]].
@@ -47,7 +47,7 @@
 *Hungarian: [[fajta]] (1), [[faj]] (2,3)
 *Indonesian: [[spesies]], [[jenis]]
 *Interlingua: [[specie]]
-*Italian: [[specie]] {{f}}, (plural: [[speci]])
+*[[Italian: specie {{f}}, (plural]]: [[speci]])
 {{mid}}
 *Japanese: [[種]] ([[しゅ]], shu), [[類]] ([[るい]], rui), [[種類]] ([[しゅるい]], shurui)
 *Lithuanian: [[rūšis]] {{f}}
@@ -68,16 +68,20 @@
 *[[variety]]
 *[[binomial nomenclature]]
 
-----
-==Latin==
-===Etymology===
-''[[specere]]'', "to [[see]]" + ''-ies'' suffix signifying [[abstract]] noun.
-===Noun===
-'''species''' ''f'', ''speciei''
-#[[view]]; [[appearance]]; [[vision]]; [[dream]]; [[semblance]]
-
 [[Category:English nouns with irregular plurals]]
 [[Category:English invariant nouns]]
+
+----
+
+==Latin==
+
+===Etymology===
+''[[specere]]'', "to [[see]]" + ''-ies'' suffix signifying [[abstract]] noun.
+
+===Noun===
+'''species''' ''f'', ''speciei''
+
+# [[view]]; [[appearance]]; [[vision]]; [[dream]]; [[semblance]]
 
 [[de:species]]
 [[fr:species]]
