trans -[[Esperanto]] +Esperanto <bleed#2253576>

--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -20,7 +20,7 @@
 *Arabic: {{ARchar|[[ينزف]]}}
 *Czech: [[krvácet]]
 *Dutch: [[bloeden]]
-*[[Esperanto]]: [[sangi]]
+*Esperanto: [[sangi]]
 *Finnish: [[vuotaa]] [[veri|verta]]
 *French: [[saigner]]
 *German: [[bluten]]
