robot  Adding: [[ja:bound]] <bound#2260556>

--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -132,6 +132,7 @@ Alteration of ''[[boun]]'', with '''-d''' partly for euphonic effect and partly 
 [[io:bound]]
 [[it:bound]]
 [[hu:bound]]
+[[ja:bound]]
 [[ru:bound]]
 [[tr:bound]]
 [[zh:bound]]
