--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -102,6 +102,10 @@ Partly imitative, also influenced by [[burble]].
 {{trans-mid}}
 {{trans-bottom}}
 
+====References====
+{{R:Dobson & Irwin Newcastle 1970}}
+{{R:New Geordie Dictionary 1987}}
+
 [[ar:bubble]]
 [[fa:bubble]]
 [[fr:bubble]]
