--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -8,8 +8,10 @@
 
 ===Noun===
 '''advertisement'''  (''plural:'' '''[[advertisements]]''')
-# A [[publication]] produced in order to sell some [[commodity]], [[service]] or similar.
-# A commercial solicitation in a [[publication]] designed to sell some [[commodity]], [[service]] or similar.
+# A [[commercial]] [[solicitation]] designed to sell some [[commodity]], [[service]] or similar.
+#:''Companies try to sell their products using advertisements in form of placards, television spots and print publications.''
+# A [[public]] [[notice]].
+#:''The city council placed an advertisement in the local newspaper to inform its residents of the forthcoming roadworks.''
 
 ====Related terms====
 * [[ad]]
@@ -20,6 +22,7 @@
 * [[infomercial]]
 
 ====Translations====
+;commercial solicitation
 {{top}}
 *Arabic: [[إِعْلان]] , [[إِيذان]]
 *Breton: [[bruderezh]] {{m}}
@@ -57,6 +60,12 @@
 *Turkish: [[reklâm]], [[ilan]], [[duyuru]]
 *Vietnamese: [[quảng cáo]], [[giới thiệu]]
 *Volapük: [[noted]], [[reklam]], [[nunam]]
+{{bottom}}
+
+;public notice
+{{top}}
+*German: [[Anzeige]] {{f}}, [[Bekanntmachung]] {{f}}
+{{mid}}
 {{bottom}}
 
 [[Category:1000 English basic words]]
