--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -15,7 +15,7 @@
 {{en-noun}}
 
 # A grinding apparatus for substances such as grains, seeds, etc.
-# The buiding housing such a grinding apparatus.
+# The building housing such a grinding apparatus.
 # A manufacturing plant for paper, steel, textiles, etc.
 # A building housing such a plant.
 # An establishment that handles a certain type of situation routinely, such as a divorce mill, etc.
