trans unlink Esperanto <rabbit#2266003>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -2,6 +2,7 @@
 ==English==
 {{wikipedia}}
 {{wikipedia|Leporidae}}
+
 ===Pronunciation===
 *[[w:AHD|AHD]]: (''UK, US'') răb'it, (''Australia'') răb'ət
 *[[w:IPA|IPA]]: (''UK, US'') /ˈræbɪt/, (''Australia'') /ˈræbət/
@@ -52,7 +53,7 @@ From Northern [[French]]
 *Czech: [[králík]]
 *Danish: [[kanin]] {{c}}
 *Dutch: [[konijn]] {{n}}
-*[[Esperanto]]: [[kuniklo]]
+*Esperanto: [[kuniklo]]
 *Estonian: [[küülik]]
 *[[Faroese]]: [[kanin]]
 *Finnish: [[kaniini]], [[kani]]
