--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -30,14 +30,18 @@
 #*:That is a CD of heavy metal.
 # [[cash]] [[dispenser]]; an automatic cash machine for withdrawing.
 #*コンビニのCDからお金を引き出しました。
-#*:こんびにのCDからおかねをひきだしました。
+#*:こんびにのしーでぃーからおかねをひきだしました。
 #*:Konbini no CD kara okane wo hikidashi mashita.
 #*:I withdrew a money from a CD at a convenient store.
 
 ====Synonyms====
+'''compact disk'''
+*[[コンパクトディスク]] (konpakuto disuku)
+'''cash dispenser'''
 *[[自動現金支払機]]  (jidō genkin shiharai-ki)
 
 ====Related terms====
+'''cash dispenser'''
 *[[ATM]]
 *[[自動現金預払機]] (jidō genkin yoharai-ki)
 
