--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -15,15 +15,15 @@
 #{{heraldry}} A white [[field]] with black spots
 
 ====Synonyms====
-
 *[[stoat]] (''British'')
+*[[short-tailed weasel]]
+*[[wild otter]]
 
 ====Translations====
-'''animal'''
-{{top}}
+{{trans-top|Mustela erminea}}
 *Albanian: [[ermelina]]
 *[[Basque]]: [[erbinude zuri]]
-*[[Belarussian]]: [[гарнастай]]
+*Belarussian: [[гарнастай]]
 *[[Breton]]: [[erminig]]
 *Bulgarian: [[хермелин]] ([[hermelin]])
 *[[Catalan]]: [[ermini]]
@@ -32,7 +32,7 @@
 *Danish: [[hermelin/lækat]]
 *Dutch: [[hermelijn]] ''m''
 *Esperanto: [[ermeno]]
-*[[Estonian]]: [[kärp]], [[lahits]], [[hermeliin]]
+*Estonian: [[kärp]], [[lahits]], [[hermeliin]]
 *[[Faroese]]: [[roysikøttur]]
 *Finnish: [[kärppä]]
 *French: [[hermine]] ''f''
@@ -45,14 +45,14 @@
 *Icelandic: [[hreysiköttur]]
 *Irish: [[easóg]]
 *Italian: [[ermellino]] ''m''
-{{mid}}
+{{trans-mid}}
 *[[Ladin]]: [[armelin]]
 *Latin: [[Mustela erminea]] '' ''
-*[[Latvian]]: [[sermulis]]
-*[[Lithuanian]]: [[šermuonėlis]]
+*Latvian: [[sermulis]]
+*Lithuanian: [[šermuonėlis]]
 *[[Lower Sorbian]]: [[hermelin]]
-*[[Macedonian]]: [[хермелин]] ([[hermelin]])
-*[[Maltese]]: [[ermellin]]
+*Macedonian: [[хермелин]] ([[hermelin]])
+*Maltese: [[ermellin]]
 *Norwegian: [[røyskatt]]
 *[[Occitan]]: [[ermina]]
 *Polish: [[gronostaj]] '' ''
@@ -66,17 +66,31 @@
 *[[Scottish]]: [[radan airmeinianach]]
 *Serbian: [[хермелин]] ([[hermelin]])
 *Slovak: [[lasica hranostaj]]
-*[[Slovenian]]: [[hermelin]]
+*Slovenian: [[hermelin]]
 *Spanish: [[armiño]] ''m''
 *Swedish: [[hermelin]]
 *Turkish: [[kakim]]
-*[[Ukrainian]]: [[горностай]] ([[gornostaj]])
+*Ukrainian: [[горностай]] ([[gornostaj]])
 *[[Upper Sorbian]]: [[hermelin]], [[(hronostaj)]]
 *Welsh: [[carlwm]]
-{{bottom}}
+{{trans-bottom}}
+
+{{trans-top|the white fur of this animal}}
+*Finnish: [[kärpännanhka]], [[hermeliini]]
+{{trans-bottom}}
+
+{{trans-top|a symbol of purity}}
+{{trans-bottom}}
+
+{{trans-top|the office of a judge}}
+{{trans-bottom}}
+
+{{trans-top|(heraldry) a white field with black spots}}
+*Finnish: [[kärpännahka]]
+{{trans-bottom}}
 
 ===Verb===
-'''to ermine'''
+{{en-verb}}
 
 # To [[clothe]] with ermine
 
